dummy module extended, now works with AppEngine's Task Queue API

--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,22 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Comment
+  properties:
+  - name: object_link
+  - name: left
+
+- kind: Comment
+  properties:
+  - name: object_link
+  - name: right
+
+- kind: Comment
+  properties:
+  - name: object_link
+  - name: right
+    direction: desc
+
 - kind: MenuItem
   properties:
   - name: menu
